# JuiceSecOps

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: juice-shop-security-lint-test.yml  juice-shop-security-report.yml  juice-shop-security-semgrep.yml  juice-shop-security-trivy.yml  juice-shop-security-zap.yml  juice-shop-security.yml
config/: policy.toml
docs/: ARCHITECTURE.md  THESIS_OBJECTIVES.md
samples/reports/: ground-truth.json  semgrep.json  trivy.json  zap.json
scripts/: fetch_juice_shop.sh  run_demo.sh  run_juice_shop_pipeline.sh  run_juice_shop_pipeline_hf.sh
src/juice_shop_llm_devsecops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/juicesecops/: cli.py  diffing.py  evaluation.py  models.py  pipeline.py  policy.py  reporting.py
src/juicesecops/parsers/: __init__.py  reports.py
src/juicesecops/providers/: __init__.py  base.py  heuristic.py  huggingface.py
tests/: test_diffing.py  test_evaluation.py  test_pipeline.py  test_reports.py
