[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juice-shop-llm-devsecops"
version = "0.1.0"
description = "Juice Shop DevSecOps thesis prototype with scanner fusion and Hugging Face LLM review"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sanket Vasant Dhande"}]
dependencies = []

[project.optional-dependencies]
hf = [
  "torch>=2.2,<3",
  "transformers>=4.55,<5",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
juicesecops = "juicesecops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
